archived_docs/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/access-clusters/add-users-to-clusters.adoc
= Adding Users to Clusters
:page-languages: [en, zh]
:revdate: 2025-05-15
:page-revdate: {revdate}

To provide a user access to view certain cluster-level resources and create new projects, assign the user a **Cluster Membership**. Cluster members can create projects and manage resources in those projects. However, not all resources, namespaces and workloads in a cluster are accessible by cluster members.

[TIP]
====
Want to provide a user with access to a _specific_ project within a cluster? See xref:cluster-admin/project-admin/add-users-to-projects.adoc[Adding Project Members] instead.
====

There are two contexts where you can add cluster members:

* Adding Members to a New Cluster
+
You can add members to a cluster as you create it (recommended if possible).

* <<_editing_cluster_membership,Adding Members to an Existing Cluster>>
+
You can always add members to a cluster after a cluster is provisioned.

== Editing Cluster Membership

Cluster administrators can edit the membership for a cluster, controlling which Rancher users can access the cluster and what features they can use.

. Click *☰ > Cluster Management*.
. Go to the cluster you want to add members to and click *⋮ > Edit Config*.
. In the *Member Roles* tab, click *Add Member*.
. Search for the user or group that you want to add to the cluster.
+
[NOTE]
.Notes
====
* At least 2 characters must be typed in the search box for results to appear.
* Users can be searched based on their username or display name.
* Search is prefix-based (e.g., a user named `Stan Dard` will appear when searching for `Sta`, but not when searching for `Dar`) and case-sensitive.
====
+
If external authentication is configured:


 ** Rancher returns users from your xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[external authentication] source as you type.
+

[NOTE]
.Using AD but can't find your users?
====
There may be an issue with your search attribute configuration. See xref:rancher-admin/users/authn-and-authz/configure-active-directory.adoc[Configuring Active Directory Authentication: Step 5].
====


 ** A drop-down allows you to add groups instead of individual users. The drop-down only lists groups that you, the logged in user, are part of.
+

[NOTE]
====
If you are logged in as a local user, external users do not display in your search results. For more information, see xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc#_external_authentication_configuration_and_principal_users[External Authentication Configuration and Principal Users].
====

. Assign the user or group *Cluster* roles.
+
xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc[What are Cluster Roles?]
+

[TIP]
====
For Custom Roles, you can modify the list of individual roles available for assignment.

* To add roles to the list, xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc[Add a Custom Role].
* To remove roles from the list, xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/locked-roles.adoc[Lock/Unlock Roles].
====

*Result:* The chosen users are added to the cluster.

* To revoke cluster membership, select the user and click *Delete*. This action deletes membership, not the user.
* To modify a user's roles in the cluster, delete them from the cluster, and then re-add them with modified roles.
